@@ -318,6 +318,9 @@ None.
 	D - Deleted Rule from a chain; note that this causes the 
 	    following rules to be renumbered.
 	X - Deleted a chain
+	P - Change a built-in chains policy. Chains in the filter table
+	    are created with a DROP policy. All other builtin chains
+	    have policy ACCEPT.
 
     Netfilter trace records indicate the table and chain being
     changed. If the change involves a particular rule, then the rule
