@@ -32,6 +32,8 @@ Changes in Shorewall 4.4.9
 
 15) Restore lone ACCEPT rule to the OUTPUT chain under OPTIMIZE 2.
 
+16) Change chain policy on OUTPUT chain with lone ACCEPT rule.
+
 Changes in Shorewall 4.4.8
 
 1)  Correct handling of RATE LIMIT on NAT rules.
